# travel-planner

./: .gitignore  Makefile  PROJECT_CLEANUP_PLAN.md  PROJECT_REALITY_CHECK.md  README.md  mcp_config.json  workflow_prompt.md
api/: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/app/: config.py
api/app/domain/: __init__.py  budget.py  geography.py  selection.py  validator.py
api/app/graph/: __init__.py  agent_contracts.py  state.py  workflow.py
api/app/llm/: __init__.py  client.py  cost_logger.py  fixtures.py  json_repair.py  retry.py
api/app/metrics/: __init__.py  events.py
api/app/models/: attraction.py  plan.py  preferences.py  schemas.py
api/app/ops/: __init__.py  operation_budget.py  rate_limit.py  readiness.py  summary.py
api/app/persistence/: __init__.py  file_session_repository.py  session_repository.py
api/app/prompts/: discover.py  plan.py
api/app/providers/: __init__.py  fixtures.py  registry.py  supplier.py  types.py  weather.py
api/app/routes/: _shared.py  adjustments.py  discover.py  discovery.py  itinerary.py  plan.py  preferences.py  sessions.py
api/app/services/: gemini.py  tavily.py
api/scripts/: __init__.py  check_production_readiness.py  export_schema.py  ops_summary.py  run_fixture_smoke.sh  smoke_amap_mcp.py  smoke_curl.sh  smoke_llm.py
api/tests/: conftest.py  test_config.py  test_models_serialization.py  test_prompts_discover.py  test_prompts_plan.py  test_tavily_query_builder.py
api/tests/domain/: test_budget.py  test_geography.py  test_schemas.py  test_selection.py  test_validator.py
(+236 files in other folders)
